--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Setup .NET SDK 6.0.x
       uses: actions/setup-dotnet@v1.7.2
       with:
-        dotnet-version: '6.0.113'
+        dotnet-version: '6.0.425'
     - name: Install specific Xamarin.iOS and Xamarin.Android versions
       run: |
         wget https://download.visualstudio.microsoft.com/download/pr/81c41aaa-a3d7-4875-8416-d04b472379b7/21d9f6c5ad3a6bc2479b2ec4b0685b6c/xamarin.ios-16.0.0.72.pkg
@@ -40,6 +40,8 @@ jobs:
         mono --version
         /Library/Frameworks/Xamarin.iOS.framework/Versions/Current/bin/mtouch --version
         ls -l /Library/Frameworks/Xamarin.Android.framework/Versions/
+    - name: install maui workload
+      run: dotnet workload install maui
     - name: configure
       run: ./configure.sh
     - name: build in DEBUG mode
@@ -140,15 +142,6 @@ jobs:
       uses: actions/setup-dotnet@v1.7.2
       with:
         dotnet-version: '6.0.x'
-    - name: Install JDK 21
-      # needed for MAUI Android build
-      run: |
-        Invoke-WebRequest -Uri https://aka.ms/download-jdk/microsoft-jdk-11-windows-x64.msi -OutFile jdk-11.msi -UseBasicParsing
-        Start-Process msiexec.exe -Wait -ArgumentList '/I jdk-11.msi /quiet'
-    - name: Build Maui Frontend
-      run: |
-        dotnet workload install maui
-        dotnet build src\GWallet.Frontend.Maui\GWallet.Frontend.Maui.fsproj --framework net6.0-android || dotnet build src\GWallet.Frontend.Maui\GWallet.Frontend.Maui.fsproj --framework net6.0-android
     - name: configure
       run: .\configure.bat
     - name: build in DEBUG mode
