WIP: publish on snap store

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -565,7 +565,7 @@ jobs:
       run: sudo snap install --dangerous *.snap
 
     - name: Test snap
-      run: geewallet --version
+      run: mwallet --version
 
     - uses: actions/upload-artifact@v3
       name: Upload snap package as artifact
