--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: geewallet
+name: mwallet
 base: core22 # the base snap is the execution environment for this snap
 version: '0.7.431.0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: minimalistic cryptocurrency brainwallet # 79 char long summary
