CI,scripts,snap,Frontend.Maui: use .NET 8
Switch to using .NET 8 for all frontends. Use Maui 8 on Gtk.
This unifies .NET versions and gets rid of .NET 6, which is
nearing end of suport anyway.

Update Microsoft.Extensions.DependencyInjection to v 8.0.0.
This iss needed to avoid error:
```
error NU1605: Warning As Error: Detected package downgrade:
Microsoft.Extensions.DependencyInjection from 8.0.0 to 6.0.0. Reference
the package directly from the project to select a different version.
```

Install maui workloads on windows--dotnet8-* lanes so that
Maui/Android can be built.

Call fsxc with DOTNET_ROLL_FORWARD=Major to allow it to run
under newer .NET version (we use .NET8 now, and fsxc is
compiled for .NET6).

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,8 +10,8 @@ on:
     - cron: "0 0 * * *"
 
 env:
-  GtkSharpVersion: 3.24.24.95
-  DotNetVersionForMauiGtk: 6.0.400
+  GtkSharpVersion: 3.24.24.117-develop
+  DotNetVersionForMauiGtk: 8.0.200
 
 # FIXME: figure out why we need to clean after make if we
 # want 'make strict' target to really happen without
@@ -94,12 +94,16 @@ jobs:
     - name: integration tests
       run: make update-servers
 
-  macOS--dotnet6-only:
+  macOS--dotnet8-only:
     runs-on: macOS-12
     steps:
     - uses: actions/checkout@v1
       with:
         submodules: false
+    - name: Setup .NET SDK 8.0.x
+      uses: actions/setup-dotnet@v1.7.2
+      with:
+        dotnet-version: '8.0.300'
     - name: HACK to emulate mono uninstall
       run: sudo rm -f `which mono` && sudo rm -f `which msbuild`
     - name: configure
@@ -117,16 +121,18 @@ jobs:
     - name: integration tests
       run: make update-servers
 
-  windows--dotnet6-and-legacyFramework:
+  windows--dotnet8-and-legacyFramework:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v1
       with:
         submodules: false
-    - name: Setup .NET SDK 6.0.x
+    - name: Setup .NET SDK 8.0.x
       uses: actions/setup-dotnet@v1.7.2
       with:
-        dotnet-version: '6.0.x'
+        dotnet-version: '8.0.x'
+    - name: install maui workloads
+      run: dotnet workload install maui
     - name: configure
       run: .\configure.bat
     - name: build in DEBUG mode
@@ -148,6 +154,8 @@ jobs:
 
         # we need to install specific version because of this bug: https://github.com/dotnet/sdk/issues/24037
         dotnet tool install fsxc --version 0.5.9.1
+        # make it work with newer .NET
+        export DOTNET_ROLL_FORWARD=Major
 
         find . -type f -name "*.fsx" | xargs -t -I {} dotnet fsxc {}
 
@@ -174,18 +182,20 @@ jobs:
     - name: integration tests
       run: .\make update-servers
 
-  windows--dotnet6-only:
+  windows--dotnet8-only:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v1
       with:
         submodules: false
-    - name: Setup .NET SDK 6.0.x
+    - name: Setup .NET SDK 8.0.x
       uses: actions/setup-dotnet@v1.7.2
       with:
-        dotnet-version: '6.0.113'
+        dotnet-version: '8.0.x'
     - name: HACK to emulate legacy .NETFramework uninstall
       run: del $(& "${Env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -find MSBuild\\**\\Bin\\MSBuild.exe)
+    - name: install maui workloads
+      run: dotnet workload install maui
     - name: configure
       run: .\configure.bat
     - name: build in DEBUG mode
@@ -207,6 +217,8 @@ jobs:
 
         # we need to install specific version because of this bug: https://github.com/dotnet/sdk/issues/24037
         dotnet tool install fsxc --version 0.5.9.1
+        # make it work with newer .NET
+        export DOTNET_ROLL_FORWARD=Major
 
         find . -type f -name "*.fsx" | xargs -t -I {} dotnet fsxc {}
 
@@ -311,7 +323,7 @@ jobs:
     - name: integration tests
       run: make update-servers
 
-  linux-vanilla--stockdotnet6-only:
+  linux-vanilla--stockdotnet8-only:
     runs-on: ubuntu-22.04
     container:
       image: "ubuntu:22.04"
@@ -324,7 +336,7 @@ jobs:
     - name: install sudo
       run: apt update && apt install --yes sudo
     - name: install all dependencies
-      run: sudo DEBIAN_FRONTEND=noninteractive apt install --yes git make dotnet6
+      run: sudo DEBIAN_FRONTEND=noninteractive apt install --yes git make dotnet8
 
     # workaround for https://github.com/actions/runner/issues/2033
     - name: ownership workaround
@@ -350,10 +362,12 @@ jobs:
 
         # we need to install specific version because of this bug: https://github.com/dotnet/sdk/issues/24037
         dotnet tool install fsxc --version 0.5.9.1
+        # make it work with newer .NET
+        export DOTNET_ROLL_FORWARD=Major
 
         find . -type f -name "*.fsx" | xargs -t -I {} dotnet fsxc {}
 
-  linux-vanilla--stockdotnet6-and-newmono:
+  linux-vanilla--stockdotnet8-and-newmono:
     runs-on: ubuntu-22.04
     container:
       image: "ubuntu:22.04"
@@ -366,7 +380,7 @@ jobs:
     - name: install sudo
       run: apt update && apt install --yes sudo
     - name: install all dependencies
-      run: sudo DEBIAN_FRONTEND=noninteractive apt install --yes git make dotnet6
+      run: sudo DEBIAN_FRONTEND=noninteractive apt install --yes git make dotnet8
     - name: install last version of mono (Microsoft APT repositories)
       run: sudo ./scripts/install_mono_from_microsoft_deb_packages.sh
 
@@ -394,10 +408,12 @@ jobs:
 
         # we need to install specific version because of this bug: https://github.com/dotnet/sdk/issues/24037
         dotnet tool install fsxc --version 0.5.9.1
+        # make it work with newer .NET
+        export DOTNET_ROLL_FORWARD=Major
 
         find . -type f -name "*.fsx" | xargs -t -I {} dotnet fsxc {}
 
-  linux-vanilla--stockdotnet6-and-stockmono:
+  linux-vanilla--stockdotnet8-and-stockmono:
     runs-on: ubuntu-22.04
     container:
       image: "ubuntu:22.04"
@@ -410,7 +426,7 @@ jobs:
     - name: install sudo
       run: apt update && apt install --yes sudo
     - name: install all dependencies
-      run: sudo DEBIAN_FRONTEND=noninteractive apt install --yes git make dotnet6 mono-xbuild fsharp
+      run: sudo DEBIAN_FRONTEND=noninteractive apt install --yes git make dotnet8 mono-xbuild fsharp
     - name: install GTK libs (dependency of GTK frontend)
       run: sudo apt install --yes libgtk2.0-cil-dev
     # workaround for https://github.com/actions/runner/issues/2033
@@ -437,6 +453,8 @@ jobs:
 
         # we need to install specific version because of this bug: https://github.com/dotnet/sdk/issues/24037
         dotnet tool install fsxc --version 0.5.9.1
+        # make it work with newer .NET
+        export DOTNET_ROLL_FORWARD=Major
 
         find . -type f -name "*.fsx" | xargs -t -I {} dotnet fsxc {}
 
@@ -490,15 +508,15 @@ jobs:
     - linux-github--dotnet-and-newmono
     - linux-vanilla--stockmono-only
     - linux-vanilla--newmono-only
-    - linux-vanilla--stockdotnet6-only
-    - linux-vanilla--stockdotnet6-and-stockmono
-    - linux-vanilla--stockdotnet6-and-newmono
-    - windows--dotnet6-and-legacyFramework
+    - linux-vanilla--stockdotnet8-only
+    - linux-vanilla--stockdotnet8-and-stockmono
+    - linux-vanilla--stockdotnet8-and-newmono
+    - windows--dotnet8-and-legacyFramework
     - windows--legacyFramework-only
-    - windows--dotnet6-only
+    - windows--dotnet8-only
     - macOS--dotnet8-and-mono
     - macOS--mono-only
-    - macOS--dotnet6-only
+    - macOS--dotnet8-only
 
     steps:
     - uses: actions/checkout@v1
