--- a/src/GWallet.Backend.Tests/GWallet.Backend.Tests.fsproj
+++ b/src/GWallet.Backend.Tests/GWallet.Backend.Tests.fsproj
@@ -25,8 +25,10 @@
     <Compile Include="Deserialization.fs" />
     <Compile Include="ExceptionMarshalling.fs" />
     <Compile Include="MetaMarshalling.fs" />
+    <Compile Include="SilentPayments.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
@@ -38,6 +40,7 @@
     <ProjectReference Include="..\GWallet.Backend\GWallet.Backend.fsproj" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="data\send_and_receive_test_vectors.json" />
     <EmbeddedResource Include="data\basicException.json" />
     <EmbeddedResource Include="data\customFSharpException.json" />
     <EmbeddedResource Include="data\realException.json" />
