--- a/src/ElectrumProxy/ElectrumProxy.fsproj
+++ b/src/ElectrumProxy/ElectrumProxy.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="BitcoreNodeClient.fs" />
     <Compile Include="Server.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
