--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,6 +22,13 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: false
+    - name: Check versions
+      run: |
+        dotnet --version
+        dotnet --list-sdks      
+        mono --version
+        /Library/Frameworks/Xamarin.iOS.framework/Versions/Current/bin/mtouch --version
+        ls -l /Library/Frameworks/Xamarin.Android.framework/Versions/
     - name: Setup .NET SDK 6.0.x
       uses: actions/setup-dotnet@v1.7.2
       with:
@@ -32,11 +39,6 @@ jobs:
         sudo installer -pkg xamarin.ios-16.0.0.72.pkg -target /
         wget https://aka.ms/xamarin-android-commercial-d17-3-macos --output-document=xamarin.android-13.0.0.0.pkg
         sudo installer -pkg xamarin.android-13.0.0.0.pkg -target /
-    - name: Check versions
-      run: |
-        mono --version
-        /Library/Frameworks/Xamarin.iOS.framework/Versions/Current/bin/mtouch --version
-        ls -l /Library/Frameworks/Xamarin.Android.framework/Versions/
     - name: configure
       run: ./configure.sh
     - name: build in DEBUG mode
